# sentient-demo

./: .env.example  .gitignore  AGENTS.md  PRESENTATION.md  README.md  pyproject.toml
src/whatsupdoc/: agent_runner.py  cli.py  git_utils.py  github.py  pipeline.py  prompt.py
